--- a/src/app/components/time-travel/time-travel.component.scss
+++ b/src/app/components/time-travel/time-travel.component.scss
@@ -15,6 +15,11 @@
 .prev-buttons, .next-buttons {
   display: flex;
   flex-direction: column;
+
+  button {
+    font-size: 0.8rem;
+    padding: 0.2rem 0.5rem;
+  }
 }
 
 .prev-buttons > button {
@@ -46,14 +51,20 @@ h1 {
     font-size: 2rem;
     background: transparent;
     border: none;
+    border-radius: 0;
     text-align: center;
     transition: 0.3s ease-in all;
     outline: 0;
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid transparent !important;
 
     &:focus {
-      border-bottom: 1px solid $white;
+      box-shadow: none;
+      border-bottom: 1px solid $white !important;
       transition: 0.3s ease-out all;
+    }
+
+    &:valid {
+      border-bottom: 1px solid transparent;
     }
   }
 
